--- a/src/undex.html
+++ b/src/undex.html
@@ -18,7 +18,7 @@
                 <h1 class="text-black">Category</h1>
                 <img class="w-10" src="/src/img/arrow_drop_down.svg" alt="">
             </div>
-            <h1 class="text-black">Ahmadulloh</h1>
+            <h1 class="text-black"></h1>
             <div class="flex justify-between items-center gap-[10px]">
                 <button
                     class="w-[111px] h-[40px] rounded-[8px] p-[8px, 32px, 8px, 32px] bg-[#000000bc] text-white">Login</button>
@@ -320,6 +320,7 @@
           </div>
         </div>
       </div>
+      <button>salom</button>
 </body>
 
 </html>
